# cl_experiments

./: CMakeLists.txt  Makefile  test.cl
cl_test_files/test_cl_and_include_header/: test.cl
cl_test_files/test_cl_and_include_header/include/: testhead.h
cl_test_files/test_include_other_cl_file/: test.cl  test_file.cl
cl_test_files/test_make_cl_lib/: test.cl
cl_test_files/test_nonkernal_func/: test.cl
cl_test_files/test_nontextur_sphere/: test.cl
clvlib/: test1.cl  test2.cl  test_lib.h  test_sphere.cl
include/: test.h  testhead.h
libft/: CMakeLists.txt
srcs/: main.c
srcs/test_cl_and_include_header/: main.c
srcs/test_include_other_cl_file/: main.c
srcs/test_make_cl_lib/: main.c
srcs/test_nonkernal_func/: main.c
srcs/test_nontextur_sphere/: main.c
